Überarbeitete Version k-Means Programmierung

--- a/book/ki/kmeansclustering.ipynb
+++ b/book/ki/kmeansclustering.ipynb
@@ -114,20 +114,20 @@
     "Der Ablauf des k-means-Clustering Algorithmus wird in folgende Schritte aufgeteilt:\n",
     "\n",
     "```{important}\n",
-    "**1. Auswahl der Anzahl der Cluster (k)**  \n",
-    "Der erste Schritt besteht darin, die **Anzahl der Cluster** festzulegen. Dies bestimmt, in wie viele Gruppen die Datenpunkte aufgeteilt werden sollen.\n",
+    "**Auswahl der Anzahl der Cluster (k)**  \n",
+    "Bevor der Algorithmus gestartet werden, muss die **Anzahl der Cluster** $k$ festgelegt werden. Diese Zahl bestimmt, in wie viele Gruppen die Datenpunkte aufgeteilt werden sollen.\n",
     "\n",
-    "**2. Initialisierung der Zentroiden**  \n",
+    "**1. Initialisierung der Zentroiden**  \n",
     "Als nächstes werden **k** Datenpunkte aus den Daten oder **k** zufällige Punkte ausgewählt, um die anfänglichen **Zentroiden** (Cluster-Zentren) zu bestimmen.\n",
     "\n",
-    "**3. Zuweisung der Datenpunkte und Bildung der Cluster**  \n",
+    "**2. Zuweisung der Datenpunkte und Bildung der Cluster**  \n",
     "Jeder Datenpunkt wird dem nächstgelegenen Zentroiden zugewiesen. Dies wird durch die [Distanzmaße](distanzmasse) zu allen Zentroiden bestimmt (z.B. mittels Euklidischer Distanz oder [Manhattan Distanz](#manhattan-distanz)).\n",
     "\n",
-    "**4. Aktualisierung der Zentroiden**  \n",
+    "**3. Aktualisierung der Zentroiden**  \n",
     "Die Zentroiden werden neu berechnet, indem der Durchschnitt (**Mean**) aller Punkte innerhalb eines Clusters berechnet wird.\n",
     "\n",
-    "**5. Wiederholung der Schritte 3 und 4**  \n",
-    "Die Schritte 3 und 4 werden solange wiederholt, bis sich die Zentroiden nicht mehr ändern oder eine maximale Anzahl an Iterationen erreicht ist.\n",
+    "**4. Wiederholung der Schritte 3 und 4**  \n",
+    "Die Schritte 2 und 3 werden solange wiederholt, bis sich die Zentroiden nicht mehr ändern oder eine maximale Anzahl an Iterationen erreicht ist.\n",
     "```\n",
     "\n",
     "Versuche mal zu überlegen, worin das Ziel des Algorithmus besteht? Denke dabei an die Beziehung der Datenpunkte **innerhalb** eines Clusters und Datenpunkte aus **verschiedenen** Clustern.\n",
@@ -362,7 +362,7 @@
     "\n",
     "```{admonition} Warum funktioniert die Elbow-Methode?\n",
     ":class: note\n",
-    "Die Methode basiert auf der Idee, dass eine kleine Anzahl von Clustern zu einer schlechten Gruppierung führt, während eine zu große Anzahl von Clustern unnötig ist und zu Overfitting führen kann. Der Knick zeigt den Punkt, an dem sich der Aufwand für mehr Cluster nicht mehr lohnt.\n",
+    "Die Methode basiert auf der Idee, dass eine kleine Anzahl von Clustern zu einer schlechten Gruppierung führt, während eine zu große Anzahl von Clustern unnötig ist und zu [Overfitting](#overfitting) führen kann. Der Knick bei Anzahl der Cluster $= 2$ zeigt den Punkt, an dem sich der Aufwand für mehr Cluster nicht mehr lohnt.\n",
     "```\n",
     "\n",
     "Mit der Elbow-Methode können wir also datengetrieben und anschaulich entscheiden, wie viele Cluster sinnvoll sind, anstatt dies nur durch Intuition oder Versuch und Irrtum zu bestimmen.\n"
@@ -385,7 +385,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.0"
+   "version": "3.10.4"
   }
  },
  "nbformat": 4,
