logger.info() statt print()

--- a/book/ki/kmeansclustering2.ipynb
+++ b/book/ki/kmeansclustering2.ipynb
@@ -790,7 +790,7 @@
     "        \n",
     "        # 4. Abbruch wenn die Zentroiden sich nicht verändert haben\n",
     "        if neue_zentroiden == zentroiden:\n",
-    "            print(\"Zentroiden haben sich nicht mehr verändert. Algorithmus stoppt.\")\n",
+    "            logger.info(\"Zentroiden haben sich nicht mehr verändert. Algorithmus stoppt.\")\n",
     "            break\n",
     "        zentroiden = neue_zentroiden\n",
     "    return cluster, zentroiden\n",
