--- a/book/ki/kmeansclustering2.ipynb
+++ b/book/ki/kmeansclustering2.ipynb
@@ -805,6 +805,79 @@
     "print(f\"Cluster: {cluster}\")\n",
     "print(f\"Zentroiden: {zentroiden}\")\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def berechne_abstand_quadrat(punkt1: Datenpunkt, punkt2: Datenpunkt) -> float:\n",
+    "    \"\"\"\n",
+    "    Berechnet das Quadrat des euklidischen Abstands zwischen zwei Punkten.\n",
+    "\n",
+    "    Args:\n",
+    "        punkt1: Der erste Datenpunkt.\n",
+    "        punkt2: Der zweite Datenpunkt.\n",
+    "\n",
+    "    Returns:\n",
+    "        float: Das Quadrat des Abstands zwischen den Punkten.\n",
+    "\n",
+    "    Examples:\n",
+    "        >>> p1 = Datenpunkt(1.0, 2.0)\n",
+    "        >>> p2 = Datenpunkt(4.0, 6.0)\n",
+    "        >>> berechne_abstand_quadrat(p1, p2)\n",
+    "        25.0\n",
+    "    \"\"\"\n",
+    "    # Berechne den quadratischen Abstand zwischen zwei Punkten\n",
+    "\n",
+    "\n",
+    "def initialisiere_zentroiden_kmeans_pp(datenpunkte: list[Datenpunkt], anzahl_zentroiden: int) -> list[Datenpunkt]:\n",
+    "    \"\"\"\n",
+    "    Initialisiert die Zentroiden mithilfe des k-means++-Algorithmus.\n",
+    "    \n",
+    "    Args:\n",
+    "        datenpunkte: Liste von Datenpunkten, aus denen die Zentroiden ausgewählt werden.\n",
+    "        anzahl_zentroiden: Anzahl der Zentroiden, die initialisiert werden sollen.\n",
+    "\n",
+    "    Returns:\n",
+    "        list[Datenpunkt]: Liste der initialisierten Zentroiden.\n",
+    "\n",
+    "    Examples:\n",
+    "        >>> datenpunkte = [\n",
+    "        ...     Datenpunkt(1.4, 4.5), Datenpunkt(5.2, 8.3),\n",
+    "        ...     Datenpunkt(3.1, 9.2), Datenpunkt(3.1, 6.2),\n",
+    "        ...     Datenpunkt(8.1, 1.2), Datenpunkt(7.2, 3.4)\n",
+    "        ... ]\n",
+    "        >>> result = initialisiere_zentroiden_kmeans_pp(datenpunkte, 2)\n",
+    "        >>> len(result)\n",
+    "        2\n",
+    "        >>> all(zentroid in datenpunkte for zentroid in result)\n",
+    "        True\n",
+    "    \"\"\"\n",
+    "    # 1. Wähle ein zufälliges erstes Zentrum\n",
+    "    zentroiden = []\n",
+    "    zentroiden.append(random.choice(datenpunkte))\n",
+    "\n",
+    "    # 2. Füge die restlichen Zentroiden iterativ hinzu\n",
+    "    while len(zentroiden) < anzahl_zentroiden:\n",
+    "        abstaende = []\n",
+    "        # Berechne die minimalen quadratischen Abstände jedes Punktes zu den Zentroiden\n",
+    "        for dp in datenpunkte:\n",
+    "            ... # Hier deine Lösung\n",
+    "\n",
+    "        # Wahrscheinlichkeiten proportional zu den Abständen berechnen\n",
+    "        gesamt_abstand = sum(abstaende)\n",
+    "        wahrscheinlichkeiten = []\n",
+    "        for abstand in abstaende:\n",
+    "            wahrscheinlichkeiten.append(abstand / gesamt_abstand)\n",
+    "\n",
+    "        # Wähle den nächsten Zentroiden basierend auf Wahrscheinlichkeiten\n",
+    "        neuer_zentroid = random.choices(datenpunkte, weights=wahrscheinlichkeiten, k=1)[0]\n",
+    "        zentroiden.append(neuer_zentroid)\n",
+    "\n",
+    "    return zentroiden"
+   ]
   }
  ],
  "metadata": {
