--- a/book/ki/kmeansclustering2.ipynb
+++ b/book/ki/kmeansclustering2.ipynb
@@ -639,7 +639,7 @@
     "(a5)=\n",
     "## A5: `aktualisiere_zentroiden()`\n",
     "\n",
-    "Der letzte Schritt: mit Hilfe der vorigen Methode `berechne_zentroid_koordinaten()` kannst du nun für alle Cluster die Zentroiden neu berechnen lassen. `aktualisiere_zentroiden()` erhält dabei ein Dictionary der Clusters. Ein Eintrag im Dictionary ist dabei der Index des Clusters und die dazugehörigen Datenpunkte. Es ist möglich, über die Werte des Dictionary zu iterieren mit `dict.values()`\n",
+    "Der letzte Schritt: mit Hilfe der vorigen Methode `berechne_zentroid_koordinaten()` kannst du nun für alle Cluster die Zentroiden neu berechnen lassen. `aktualisiere_zentroiden()` erhält dabei eine Liste der Clusters. Ein Eintrag in der Liste ist dabei wiederum eine Liste von Datenpunkte. Unten siehst du ein Beispiel, wie man die einzelnen Cluster abarbeiten kann.\n",
     "\n",
     "Ein Beispiel:\n",
     "\n",
