--- a/book/features.ipynb
+++ b/book/features.ipynb
@@ -4,30 +4,84 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Testseiet für neue Features\n",
+    "# Testseite für neue Features\n",
     "\n",
-    "Link zu [k-Nächste-Nachbarn-Algorithmus](knearestneighbor)\n",
+    "Diese Seite dient als Ort für das Testen neuer Features und sollte nicht in der Live-Version der Seite auftauchen.\n",
     "\n",
-    "[text with attributes]{.bg-warning}\n",
+    "## Tooltips\n",
+    "```{warning}\n",
+    ":name: hinweis-tooltips\n",
+    "1. Die Tooltips funktionieren manchmal beim Entwickeln mit `make develop` nicht für Links auf andere Seiten im Buch. Hier muss ein `make clean` erfolgen, damit die Links wieder funktionieren. Hat aber keine Auswirkung auf die Live-Version, da diese ja nur einmal gebaut wird und dann nicht mehr verändert wird.  \n",
+    "Alternativ für das Testen der Tooltip die Seite mit `make build` neu bauen und manuell öffnen ohne Live-Server.  \n",
+    "2. Die Referenzen der Tooltips können unterschiedlich angebeben werden. Es ist jedoch ratsam, immer den gewünschten Text und den Namen der Referenz anzugeben. Also statt ``{term}`Aktivierungsfunktion` `` lieber ``{term}`Aktivierungsfunktion <Aktivierungsfunktion>` ``. So ist man auf der sicheren Seite, wenn sie der Name eines Dokuments oder einer Referenz ändern sollte.\n",
     "\n",
-    "{.glossary}\n",
-    "term name\n",
-    ": Definition of the term\n",
+    "```\n",
     "\n",
-    "{term}`term name`\n",
+    "```{seealso}\n",
+    "- [sphinx-tippy Beispiel](https://sphinx-tippy.readthedocs.io/en/latest/) (https://github.com/sphinx-extensions2/sphinx-tippy)\n",
+    "- [teachbooks-sphinx-tippy Beispiel](https://teachbooks.io/TeachBooks-sphinx-tippy-Example/main/) (https://github.com/TeachBooks/teachbooks-sphinx-tippy)\n",
+    "```\n",
+    "\n",
+    "**Beispiele:**  \n",
+    "\n",
+    "- Link zu ipynb-Seite: [](live_code)\n",
+    "- Link zu ipynb-Seite mit eigenem Text: [Live code](live_code)\n",
+    "- Link zu ipynb-Seite in Unterordner: [](ki/knearestneighbor)\n",
+    "- Link zu ipynb-Seite in Unterordner mit eigenem Text: [k-Nächste-Nachbarn-Algorithmus](ki/knearestneighbor)\n",
+    "- Link zu ipynb-Seite mit {doc}: {doc}`live_code`\n",
+    "- Link zu ipynb-Seite mit {doc} und eigenem Text: {doc}`Live code <live_code>`\n",
+    "- Link zu ipynb-Seite mit {doc} in Unterordner: {doc}`ki/knearestneighbor`\n",
+    "- Link zu ipynb-Seite mit {doc} in Unterordner und eigenem Text: {doc}`k-Nächste-Nachbarn-Algorithmus <ki/knearestneighbor>`\n",
+    "- Link zu Glossar: {term}`Aktivierungsfunktion`\n",
+    "- Link zu Glossar mit eigenem Text: {term}`siehe Backpropagation <Backpropagation>`\n",
+    "- Link zu Admonition: {ref}`hinweis-tooltips` (schneit nicht zu funktionieren)\n",
+    "- Link zu Admonition mit eigenem Text: {ref}`Hinweis zu Tooltips <hinweis-tooltips>`\n",
+    "- Link zu englischen Wikipedia: [Tooltip](https://en.wikipedia.org/wiki/Tooltip)\n",
+    "\n",
+    "## Block attributes\n",
+    "\n",
+    "```{seealso}\n",
+    "https://myst-parser.readthedocs.io/en/latest/syntax/optional.html#block-attributes\n",
+    "```\n",
     "\n",
     "{#mypara .bg-warning}\n",
-    "Here is a paragraph with attributes.\n",
+    "Das ist ein ganzer Paragraf als Warnung hinterlegt.\n",
     "\n",
-    "[test](https://en.wikipedia.org/wiki/Uniform_Resource_Identifier)\n",
+    "Referenz zum vorigen {ref}`Paragraphen <mypara>` mit Tooltip.\n",
     "\n",
-    "{ref}`A reference to my paragraph <mypara>`\n",
+    "## Definition lists and glossaries\n",
+    "```{seealso}\n",
+    "https://myst-parser.readthedocs.io/en/latest/syntax/typography.html#syntax-glossaries\n",
+    "```\n",
     "\n",
-    "- [ ] An item that needs doing\n",
-    "- [x] An item that is complete\n",
+    "Automatisches Formatieren für Glossar-Einträge:\n",
     "\n",
-    "xxx  "
+    "{.glossary}\n",
+    "Term 1\n",
+    ": Definition\n",
+    "\n",
+    "Term 2\n",
+    ": Longer definition\n",
+    "\n",
+    "  With multiple paragraphs\n",
+    "\n",
+    "Referenz zu den vorigen Definitionen {term}`Term 1` und {term}`Term 2` mit Tooltip.\n",
+    "\n",
+    "\n",
+    "## Inline attributes\n",
+    "\n",
+    "```{seealso}\n",
+    "https://myst-parser.readthedocs.io/en/latest/syntax/optional.html#inline-attributes\n",
+    "```\n",
+    "Hier kommt ein [Text mit Warnung]{.bg-warning} in einem Textabschnitt  \n",
+    "\n",
+    " "
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
