Tooltips in k-Means

--- a/book/features.ipynb
+++ b/book/features.ipynb
@@ -36,7 +36,7 @@
     "- Link zu Glossar mit eigenem Text: {term}`siehe Backpropagation <Backpropagation>`\n",
     "- Link zu Admonition: {ref}`hinweis-tooltips` (schneit nicht zu funktionieren)\n",
     "- Link zu Admonition mit eigenem Text: {ref}`Hinweis zu Tooltips <hinweis-tooltips>`\n",
-    "- Link zu englischen Wikipedia: [Tooltip](https://en.wikipedia.org/wiki/Tooltip)\n",
+    "- Link zu englischen Wikipedia: [Tooltip](https://en.wikipedia.org/wiki/Tooltip) \\[deutsches Wiki leider nicht unterstützt\\]\n",
     "\n",
     "## Block attributes\n",
     "\n",
