--- a/book/ki/kmeansclustering.ipynb
+++ b/book/ki/kmeansclustering.ipynb
@@ -4,17 +4,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "\n",
     "````{margin}\n",
     "```{admonition} Shortlink\n",
     ":class: seealso\n",
     "https://is.gd/tgi13_kmeans\n",
     "```\n",
     "````\n",
-    "# k-Means-Clustering\n",
-    "Du kennst bereits den [k-Nächste-Nachbarn-Algorithmus](knearestneighbor), ein Verfahren, das mit [Trainingsdaten](#trainingsdaten) neue Daten klassifiziert. Nun betrachten wir [k-Means-Clustering](https://de.wikipedia.org/wiki/k-Means-Algorithmus), einen Algorithmus, um [Datenpunkte](#datenpunkt) in sogenannte Cluster zu gruppieren.\n",
     "\n",
-    "Im Bereich der KI wird oft mit großen Datenmengen gearbeitet, die auf Muster untersucht und in Gruppen eingeteilt werden. Algorithmen dieser Art sind Verfahren der [Clusteranalyse](https://de.wikipedia.org/wiki/Clusteranalyse). k-Means ist so ein Algorithmus, der Datenpunkte ohne vorherige Kenntnis der Gruppenzugehörigkeit in $k$ Cluster einteilt. Das macht k-Means zu einem [unüberwachten Lernalgorithmus](#unueberwachtes-lernen). Seine Stärke liegt in der effizienten Strukturierung großer Datensätze und dem Entdecken versteckter Muster.\n",
+    "# k-Means-Clustering\n",
+    "Du kennst bereits den {doc}`k-Nächste-Nachbarn-Algorithmus <knearestneighbor>`, ein Verfahren, das mit {term}`Trainingsdaten <trainingsdaten>` neue Daten klassifiziert. Nun betrachten wir [k-Means-Clustering](https://de.wikipedia.org/wiki/k-Means-Algorithmus), einen Algorithmus, um {term}`Datenpunkte <Datenpunkt>` in sogenannte Cluster zu gruppieren.\n",
+    "\n",
+    "Im Bereich der KI wird oft mit großen Datenmengen gearbeitet, die auf Muster untersucht und in Gruppen eingeteilt werden. Algorithmen dieser Art sind Verfahren der [Clusteranalyse](https://de.wikipedia.org/wiki/Clusteranalyse). k-Means ist so ein Algorithmus, der Datenpunkte ohne vorherige Kenntnis der Gruppenzugehörigkeit in $k$ Cluster einteilt. Das macht k-Means zu einem {term}`unüberwachten Lernalgorithmus <Unüberwachtes Lernen>`. Seine Stärke liegt in der effizienten Strukturierung großer Datensätze und dem Entdecken versteckter Muster.\n",
     "\n",
     "````{margin}\n",
     "```{admonition} Info\n",
@@ -30,7 +30,7 @@
    "source": [
     "## Überwachtes vs. unüberwachtes Lernen\n",
     "\n",
-    "Beide Algorithmen stammen aus dem Bereich **Maschinelles Lernen**, welches grob in **überwachtes Lernen** und **unüberwachtes Lernen** unterteilt wird. Beim [überwachten Lernen](https://de.wikipedia.org/wiki/Überwachtes_Lernen) wird ein Datensatz verwendet, der Trainingsdaten mit den zugehörigen **Labels** enthält. Das Modell lernt aus Beispielen, bei denen die richtigen Antworten bereits bekannt sind. Diese Methode eignet sich gut für Aufgaben wie Klassifikationen (z.B. Spam-Erkennung). Der [k-Nächste-Nachbarn-Algorithmus](knearestneighbor) ist ein solches Verfahren.\n",
+    "Beide Algorithmen stammen aus dem Bereich **Maschinelles Lernen**, welches grob in **überwachtes Lernen** und **unüberwachtes Lernen** unterteilt wird. Beim [überwachten Lernen](https://de.wikipedia.org/wiki/Überwachtes_Lernen) wird ein Datensatz verwendet, der Trainingsdaten mit den zugehörigen **{term}`Labels <Label>`** enthält. Das Modell lernt aus Beispielen, bei denen die richtigen Antworten bereits bekannt sind. Diese Methode eignet sich gut für Aufgaben wie Klassifikationen (z.B. Spam-Erkennung). Der {doc}`k-Nächste-Nachbarn-Algorithmus <knearestneighbor>` ist ein solches Verfahren.\n",
     "\n",
     "Beim [unüberwachten Lernen](https://de.wikipedia.org/wiki/Unüberwachtes_Lernen) sind die Trainingsdaten nicht gelabelt. Stattdessen versuchen unüberwachte Algorithmen, eigenständig Muster in den Daten zu erkennen. Clustering, wie k-Means, ist ein typisches Beispiel dafür. Der Algorithmus ermittelt Gruppen (Cluster) von ähnlichen Datenpunkten und hilft, ungeordnete Daten zu strukturieren."
    ]
