Tooltips im KI Bereich

--- a/book/features.ipynb
+++ b/book/features.ipynb
@@ -36,6 +36,8 @@
     "- Link zu Glossar mit eigenem Text: {term}`siehe Backpropagation <Backpropagation>`\n",
     "- Link zu Admonition: {ref}`hinweis-tooltips` (schneit nicht zu funktionieren)\n",
     "- Link zu Admonition mit eigenem Text: {ref}`Hinweis zu Tooltips <hinweis-tooltips>`\n",
+    "- Link zu Beispiel-Abschnitt mit ``{ref}``: {ref}`Beispiel-Abschnitt <beispiel-abschnitt>`\n",
+    "- Link zu Beispiel-Abschnitt mit ``[]()``: [Beispiel-Abschnitt](#beispiel-abschnitt)\n",
     "- Link zu englischen Wikipedia: [Tooltip](https://en.wikipedia.org/wiki/Tooltip) \\[deutsches Wiki leider nicht unterstützt\\]\n",
     "\n",
     "## Block attributes\n",
@@ -74,6 +76,13 @@
     "https://myst-parser.readthedocs.io/en/latest/syntax/optional.html#inline-attributes\n",
     "```\n",
     "Hier kommt ein [Text mit Warnung]{.bg-warning} in einem Textabschnitt  \n",
+    "\n",
+    "(beispiel-abschnitt)=\n",
+    "## Beispiel-Abschnitt zum verlinken\n",
+    "Diesen Abschnitt kann man auch verlinken, indem mal einen Verweisschlüssel vorher\n",
+    "setzt mit ``(...)=``.\n",
+    "Achtung: damit die Verlinkung als Link mit 🔗 erscheint, muss der Link mit \n",
+    "als Rolle mit ``{ref}... <...>`` statt als Cross Referenz mit ``[...](...)`` gesetzt werden.\n",
     "\n",
     " "
    ]
