--- a/book/ki/kmeansclustering.ipynb
+++ b/book/ki/kmeansclustering.ipynb
@@ -12,7 +12,7 @@
     "````\n",
     "\n",
     "# k-Means-Clustering\n",
-    "Du kennst bereits den {doc}`k-Nächste-Nachbarn-Algorithmus <knearestneighbor>`, ein Verfahren, das mit {term}`Trainingsdaten <trainingsdaten>` neue Daten klassifiziert. Nun betrachten wir [k-Means-Clustering](https://de.wikipedia.org/wiki/k-Means-Algorithmus), einen Algorithmus, um {term}`Datenpunkte <Datenpunkt>` in sogenannte Cluster zu gruppieren.\n",
+    "Du kennst bereits den {doc}`k-Nächste-Nachbarn-Algorithmus <knearestneighbor>`, ein Verfahren, das mit {term}`Trainingsdaten <Trainingsdaten>` neue Daten klassifiziert. Nun betrachten wir [k-Means-Clustering](https://de.wikipedia.org/wiki/k-Means-Algorithmus), einen Algorithmus, um {term}`Datenpunkte <Datenpunkt>` in sogenannte Cluster zu gruppieren.\n",
     "\n",
     "Im Bereich der KI wird oft mit großen Datenmengen gearbeitet, die auf Muster untersucht und in Gruppen eingeteilt werden. Algorithmen dieser Art sind Verfahren der [Clusteranalyse](https://de.wikipedia.org/wiki/Clusteranalyse). k-Means ist so ein Algorithmus, der Datenpunkte ohne vorherige Kenntnis der Gruppenzugehörigkeit in $k$ Cluster einteilt. Das macht k-Means zu einem {term}`unüberwachten Lernalgorithmus <Unüberwachtes Lernen>`. Seine Stärke liegt in der effizienten Strukturierung großer Datensätze und dem Entdecken versteckter Muster.\n",
     "\n",
@@ -112,16 +112,16 @@
     "````\n",
     "\n",
     "Der Ablauf des k-means-Clustering Algorithmus wird in folgende Schritte aufgeteilt:\n",
-    "\n",
     "```{important}\n",
-    "**Auswahl der Anzahl der Cluster (k)**  \n",
+    ":name: admonition-k-means-algorithmus\n",
+    "**Auswahl der Anzahl der Cluster ($k$)**  \n",
     "Bevor der Algorithmus gestartet werden, muss die **Anzahl der Cluster** $k$ festgelegt werden. Diese Zahl bestimmt, in wie viele Gruppen die Datenpunkte aufgeteilt werden sollen.\n",
     "\n",
     "**1. Initialisierung der Zentroiden**  \n",
-    "Als nächstes werden **k** Datenpunkte aus den Daten oder **k** zufällige Punkte ausgewählt, um die anfänglichen **Zentroiden** (Cluster-Zentren) zu bestimmen.\n",
+    "Als nächstes werden $k$ Datenpunkte aus den Daten oder $k$ zufällige Punkte ausgewählt, um die anfänglichen **Zentroiden** (Cluster-Zentren) zu bestimmen.\n",
     "\n",
     "**2. Zuweisung der Datenpunkte und Bildung der Cluster**  \n",
-    "Jeder Datenpunkt wird dem nächstgelegenen Zentroiden zugewiesen. Dies wird durch die [Distanzmaße](distanzmasse) zu allen Zentroiden bestimmt (z.B. mittels Euklidischer Distanz oder [Manhattan Distanz](#manhattan-distanz)).\n",
+    "Jeder Datenpunkt wird dem nächstgelegenen Zentroiden zugewiesen. Dies wird durch die {term}`Distanzmaße <Distanzmaße>` zu allen Zentroiden bestimmt (z.B. mittels Euklidischer Distanz oder {term}`Manhattan Distanz <Manhattan-Distanz>`).\n",
     "\n",
     "**3. Aktualisierung der Zentroiden**  \n",
     "Die Zentroiden werden neu berechnet, indem der Durchschnitt (**Mean**) aller Punkte innerhalb eines Clusters berechnet wird.\n",
@@ -331,7 +331,7 @@
     "## Ein Beispiel zum Nachrechnen\n",
     "\n",
     "Du weißt nun, wie der Algorithmus funktioniert und zu welchen Ergebnissen er führen kann. Am besten kannst du das nachvollziehen, indem du den Algorithmus selbst mal durchführst. Lade dir dieses\n",
-    "{download}`Aufgabenblatt <./kmeansclustering_aufgabenblatt.pdf>` herunter und bearbeite es. Die Anweisungen findest du dem Arbeitsblatt. Viel Erfolg 💪"
+    "{download}`Aufgabenblatt <kmeansclustering_aufgabenblatt.pdf>` herunter und bearbeite es. Die Anweisungen findest du dem Arbeitsblatt. Viel Erfolg 💪"
    ]
   },
   {
