--- a/book/ki/kmeansclustering2_aufgabe.ipynb
+++ b/book/ki/kmeansclustering2_aufgabe.ipynb
@@ -9,7 +9,8 @@
     "Wir werden uns nun Schritt für Schritt die nötigen Methoden den k-Means-Clustering Algorithmus erarbeiten. Um am Ende nicht einen großen Codeblock erstellen zu müssen, werden wir soviel Vorarbeit wie möglich erledigen. So kannst du dich am Ende ganz auf die Implementierung der Teile des Algorithmus konzentrieren [Stichwort: externe kognitive Belastung gering halten, siehe [Cognitive Load Theory (CLT)](https://de.wikipedia.org/wiki/Cognitive_Load_Theory) 😉]\n",
     "\n",
     "## Pseudocode\n",
-    "Nochmals die Grundidee des [Algorithmus](#k-means-clustering-algorithmus):\n",
+    "Nochmals die Grundidee des {ref}`Algorithmus <admonition-k-means-algorithmus>`:\n",
+    "\n",
     "1. **Clusterzentren initialisieren:** Zu Beginn werden $k$ Zentroiden (Mittelwerte der Cluster) zufällig oder nach einer bestimmten Heuristik gewählt.\n",
     "2. **Datenpunkte zuweisen:** Jeder Datenpunkt wird dem nächstgelegenen Clusterzentrum zugeordnet. Diese Zuordnung basiert üblicherweise auf der euklidischen Distanz.\n",
     "3. **Zentroiden aktualisieren:** Nach der Zuordnung werden die Zentroiden neu berechnet, indem der Mittelwert aller Punkte in jedem Cluster bestimmt wird.\n",
@@ -58,13 +59,13 @@
     "Danach müssen die Koordinaten der Zentroiden neu berechnet werden. Zunächst für einen (**A4**), dann für alle Zentroiden (**A5**).\n",
     "\n",
     "**Deine Aufgaben sind:**  \n",
-    "- [A1](#a1): `berechne_euklidische_distanz()`\n",
-    "- [A2](#a2): `finde_naechsten_zentroiden()`\n",
-    "- [A3](#a3): `datenpunkte_zuweisen()`\n",
-    "- [A4](#a4): `berechne_zentroid_koordinaten()`\n",
-    "- [A5](#a5): `aktualisiere_zentroiden()`\n",
+    "- {ref}`A1 <aufgabe1>`: `berechne_euklidische_distanz()`\n",
+    "- {ref}`A2 <aufgabe2>`: `finde_naechsten_zentroiden()`\n",
+    "- {ref}`A3 <aufgabe3>`: `datenpunkte_zuweisen()`\n",
+    "- {ref}`A4 <aufgabe4>`: `berechne_zentroid_koordinaten()`\n",
+    "- {ref}`A5 <aufgabe5>`: `aktualisiere_zentroiden()`\n",
     "\n",
-    "Wenn alle Aufgaben erledigt, sollte [die Methode](k-means-final) `k_means()` korrekt funktionieren 😎."
+    "Wenn alle Aufgaben erledigt, sollte {ref}`die Methode <k-means-final>` `k_means()` korrekt funktionieren 😎."
    ]
   },
   {
@@ -73,7 +74,7 @@
    "source": [
     "```{admonition} Hinweis\n",
     ":class: note\n",
-    "Die folgenden Unterpunkte bis zur [ersten Aufgabe](#k-means-aufgabe-1) sind nicht essentiel, um den Algorithmus zu verstehen, aber dennoch hilfreich für die spätere Implementierung. Und auch generell wichtig für das vielleicht spätere Leben als ProgrammiererIn.\n",
+    "Die folgenden Unterpunkte bis zur {ref}`ersten Aufgabe <aufgabe1>` sind nicht essentiel, um den Algorithmus zu verstehen, aber dennoch hilfreich für die spätere Implementierung. Und auch generell wichtig für das vielleicht spätere Leben als ProgrammiererIn.\n",
     "```\n",
     "\n",
     "## Vorentlastungen\n",
@@ -154,7 +155,7 @@
    "source": [
     "### Unit Tests\n",
     "\n",
-    "Wir werden zum Testen unserer Methoden **Unit-Tests** verwenden. Das sind kleine, automatisierte Tests, die jeweils eine **einzelne** Funktion oder Methode in einem Programm überprüfen. Sie helfen sicherzustellen, dass jede Komponente des Codes genau das tut, was sie tun soll. Stell dir Unit-Tests wie eine Checkliste vor, die jede Funktion Schritt für Schritt überprüft, ob sie die erwarteten Ergebnisse liefert.  \n",
+    "Wir werden zum Testen unserer Methoden [Unit-Tests](https://en.wikipedia.org/wiki/Unit_testing) verwenden. Das sind kleine, automatisierte Tests, die jeweils eine **einzelne** Funktion oder Methode in einem Programm überprüfen. Sie helfen sicherzustellen, dass jede Komponente des Codes genau das tut, was sie tun soll. Stell dir Unit-Tests wie eine Checkliste vor, die jede Funktion Schritt für Schritt überprüft, ob sie die erwarteten Ergebnisse liefert.  \n",
     "\n",
     "Bei den einzelnen Methoden sind bereits jeweils Unit-Tests hinterlegt, sodass sie dir eine Hilfe bei der Implementierung geben. Wenn du die Test-Methoden studierst, siehst du, wie die zu implementierenden Methoden aufgerufen werden.\n",
     "\n",
@@ -266,7 +267,7 @@
    "source": [
     "\n",
     "### `Datenpunkt`-Klasse\n",
-    "Damit du die Koordinaten der Datenpunkte und der Zentroiden bequem veralten können, ist die Hilfsklasse `Datenpunkt` bereits vorhanden. In dieser Klasse erweitern wir noch die internen Methoden `__eq__()` und `__hash__()`, damit wir es später leichter haben, die neuen Zentroiden mit den alten Zentroiden der vorigen Iteration zu vergleichen (siehe Schritt 5 des [Algorithmus](#k-means-clustering-algorithmus)). Es wäre auch möglich, die Koordinaten in verschachtelten Arrays zu verwalten, aber die Lösung einer eigenen Klasse ist eleganter und wir können Komplexität in diese Klasse extrahieren. Für dich wichtig zu wissen: einen neuen Datenpunkt kannst du mit `punkt = Datenpunkt(1.2345, 6.789)` erzeugen.\n",
+    "Damit du die Koordinaten der Datenpunkte und der Zentroiden bequem veralten können, ist die Hilfsklasse `Datenpunkt` bereits vorhanden. In dieser Klasse erweitern wir noch die internen Methoden `__eq__()` und `__hash__()`, damit wir es später leichter haben, die neuen Zentroiden mit den alten Zentroiden der vorigen Iteration zu vergleichen (siehe Schritt 4 des [Algorithmus](admonition-k-means-algorithmus)). Es wäre auch möglich, die Koordinaten in verschachtelten Arrays zu verwalten, aber die Lösung einer eigenen Klasse ist eleganter und wir können Komplexität in diese Klasse auslagern. Für dich wichtig zu wissen: einen neuen Datenpunkt kannst du mit `punkt = Datenpunkt(1.2345, 6.789)` erzeugen.\n",
     "\n",
     "```{admonition} Zentroiden & Datenpunkte\n",
     ":class: note\n",
@@ -436,10 +437,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "(a1)=\n",
+    "(aufgabe1)=\n",
     "## A1: `berechne_euklidische_distanz()`\n",
     "\n",
-    "Zum Warmwerden: du brauchst eine Methode, welche dir die Distanz zwischen zwei Datenpunkten berechnet. Wir werden hierfür als [Distanzmaße](#distanzmasse) die [Euklidische Distanz](euklidische-distanz) verwenden. Die Methode erhält zwei Datenpunkte und gibt die Distanz auf zwei Nachkommastellen gerundet zurück. Zum runden benötigst du die Methode [round()](https://www.w3schools.com/python/ref_func_round.asp)."
+    "Zum Warmwerden: du brauchst eine Methode, welche dir die Distanz zwischen zwei Datenpunkten berechnet. Wir werden hierfür als {term}`Distanzmaße <Distanzmaße>` die {term}`Euklidische Distanz <Euklidische Distanz>` verwenden. Die Methode erhält zwei Datenpunkte und gibt die Distanz auf zwei Nachkommastellen gerundet zurück. Zum runden benötigst du die Methode [round()](https://www.w3schools.com/python/ref_func_round.asp)."
    ]
   },
   {
@@ -478,7 +479,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "(a2)=\n",
+    "(aufgabe2)=\n",
     "## A2: `finde_naechsten_zentroiden()`\n",
     "\n",
     "Nun wollen wir für einen `Datenpunkt` den nächstgelegenen Zentroiden ermitteln. Wir bekommen dafür die Liste von Zentroiden übergeben und müssen hieraus nun den Zentroiden ermitteln, zu dem die Distanz des `Datenpunkts` am geringsten ist. Überlege dir vorher, wie du vorgehen möchtest. Zurückgegeben wird der Index des ermittelten Zentroiden. Wenn also der 3. Zentroid der nächstgelegene ist, dann muss der Index 2 zurückgegeben wird (da Index bei 0 beginnt).\n",
@@ -531,7 +532,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "(a3)=\n",
+    "(aufgabe3)=\n",
     "## A3: `datenpunkte_zuweisen()`\n",
     "\n",
     "Nachdem wir den nächsten Zentroiden zu einem Datenpunkt berechnen können, sind wir nun in der Lage, alle Datenpunkte zu clustern. Mit der Methode `datenpunkte_zuweisen()` können wir nun für jeden Datenpunkt den nächsten Zentroiden ermitteln und daraus die Cluster bilden.\n",
@@ -595,7 +596,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "(a4)=\n",
+    "(aufgabe4)=\n",
     "## A4: `berechne_zentroid_koordinaten()`\n",
     "\n",
     " Wir benötigen nun zum einen noch eine Funktion `berechne_zentroid_koordinaten()`, welche uns aus den Datenpunkten eines Clusters die neuen Koordinaten des Zentroiden berechnet. Diese Funktion wird dann von `aktualisiere_zentroiden()` in der nächsten Aufgabe verwendet, um die Zentroiden in jeder Iteration alle neu zu berechnen."
@@ -636,7 +637,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "(a5)=\n",
+    "(aufgabe5)=\n",
     "## A5: `aktualisiere_zentroiden()`\n",
     "\n",
     "Der letzte Schritt: mit Hilfe der vorigen Methode `berechne_zentroid_koordinaten()` kannst du nun für alle Cluster die Zentroiden neu berechnen lassen. `aktualisiere_zentroiden()` erhält dabei eine Liste der Clusters. Ein Eintrag in der Liste ist dabei wiederum eine Liste von Datenpunkte. Unten siehst du ein Beispiel, wie man die einzelnen Cluster abarbeiten kann.\n",
@@ -809,7 +810,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "remove-cell"
+    ]
+   },
    "outputs": [],
    "source": [
     "def berechne_abstand_quadrat(punkt1: Datenpunkt, punkt2: Datenpunkt) -> float:\n",
@@ -830,6 +835,7 @@
     "        25.0\n",
     "    \"\"\"\n",
     "    # Berechne den quadratischen Abstand zwischen zwei Punkten\n",
+    "    # Hinweis: du hast bereits den einfachen Abstand berechnet\n",
     "\n",
     "\n",
     "def initialisiere_zentroiden_kmeans_pp(datenpunkte: list[Datenpunkt], anzahl_zentroiden: int) -> list[Datenpunkt]:\n",
@@ -896,7 +902,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.4"
+   "version": "3.12.0"
   }
  },
  "nbformat": 4,
