--- a/book/ki/knearestneighbor.ipynb
+++ b/book/ki/knearestneighbor.ipynb
@@ -36,10 +36,10 @@
     "   \n",
     "4. Warum wird der Datenpunkt `(0,51/0,38)` mit einem *Fragezeichen* angezeigt, d.h. warum kann er nicht kategorisiert werden?\n",
     "\n",
-    "5. Wie wird ein Tier mit Niedlichkeit 0,50 und Flauschigkeit 0,50 kategorisiert? Was ändert sich, wenn du den Wert von *k* auf 4 änderst, aber die Position beibehältst. Erkläre!\n",
+    "5. Wie wird ein Tier mit Niedlichkeit 0,50 und Flauschigkeit 0,50 kategorisiert? Was ändert sich, wenn du den Wert von $k$ auf 4 änderst, aber die Position beibehältst. Erkläre!\n",
     "\n",
-    "6. Probiere auch alle anderen möglichen Werte für *k* aus. Erkläre, was passiert.  \n",
-    "   Welchen der möglichen Werte für *k* würdest du wählen, um eine möglichst gute Klassifikation zu erhalten?  \n",
+    "6. Probiere auch alle anderen möglichen Werte für $k$ aus. Erkläre, was passiert.  \n",
+    "   Welchen der möglichen Werte für $k$ würdest du wählen, um eine möglichst gute Klassifikation zu erhalten?  \n",
     "\n",
     "7. Schreibe in 1-2 Sätzen auf, wie der k-Nächste-Nachbarn-Algorithmus deiner Meinung nach arbeitet. Vergleiche deine Definition mit der deiner Sitznachbarin."
    ]
@@ -69,11 +69,11 @@
     "   2. Vogelspinne\n",
     "   3. Hai\n",
     "2. Man vermutet evtl *Kaninchen*, weil das nächstegelegene Tier ein Kaninchen ist, aber der Punkt wird als Igel klassifiziert. (Weil von den 5 nächstgelegenen Tieren 3, also die Mehrheit, Igel sind.)\n",
-    "3. Die Linien zeigen die *k* am nächsten gelegenen Tiere (die *\"Nachbarn\"* des angeklickten Punkts), wobei *k* die Zahl ist, die im Auswahlfeld unten gewählt wurde.\n",
+    "3. Die Linien zeigen die $k$ am nächsten gelegenen Tiere (die *\"Nachbarn\"* des angeklickten Punkts), wobei $k$ die Zahl ist, die im Auswahlfeld unten gewählt wurde.\n",
     "4. Unter den 5 nächsten Nachbarn kommt keine Spezies eindeutig *am häufigsten* vor, d.h. keine Spezies hat eine eindeutige Mehrheit. (Unentschieden zwischen 2 Haien und 2 Igeln).\n",
     "5. Für *k=5*: Vogelspinne, aber für *k=4*: Fragezeichen. Erklärung: Es gibt bei *k=4* keine eindeutige Mehrheit untern den Nachbarn, d.h. keine Tierart, die am häufigsten unter den Nachbarn vorkommt.\n",
-    "6. Es werden jeweils die *k* nächsten Nachbarn angezeigt. Für *k=1* wird nur der nächste Nachbar angezeigt, für *k=2* die zwei nächsten Nachbarn, usw.  Für *k=5* wird die Mehrheit der 5 nächsten Nachbarn angezeigt.  \n",
-    "   Sinnvolles *k* auswählen: *k=1* ist zu wenig, weil ein einzelner Nachbar nicht unbedingt repräsentativ ist (*Ausreißer*). Ein großes *k* robuster, aber dadurch geht unter Umständen die Genauigkeit verloren, weil \"örtliche Besonderheiten\" nicht mehr berücksichtigt werden. In unserem Beispiel würde z.B.\n",
+    "6. Es werden jeweils die $k$ nächsten Nachbarn angezeigt. Für *k=1* wird nur der nächste Nachbar angezeigt, für *k=2* die zwei nächsten Nachbarn, usw.  Für *k=5* wird die Mehrheit der 5 nächsten Nachbarn angezeigt.  \n",
+    "   Sinnvolles $k$ auswählen: *k=1* ist zu wenig, weil ein einzelner Nachbar nicht unbedingt repräsentativ ist (*Ausreißer*). Ein großes $k$ robuster, aber dadurch geht unter Umständen die Genauigkeit verloren, weil \"örtliche Besonderheiten\" nicht mehr berücksichtigt werden. In unserem Beispiel würde z.B.\n",
     "   *k=20* bedeuten, dass es vollkommen egal wird, wohin man klickt.\n",
     "7.  Eine mögliche Beschreibung des Verfahrens in zwei Sätzen findest du am Anfang des nächsten Abschnitts.\n",
     "``````"
@@ -88,8 +88,8 @@
     "```{important}\n",
     "Umgangssprachlich kann der **k-Nächste-Nachbarn-Algorithmus** so beschrieben werden:\n",
     "Um einen ungelabelten Datensatz zu klassifizieren\n",
-    "1. finde die *k* Datensätze, die dem ungelabelte Datensatz am ähnlichsten sind.\n",
-    "2. gib das Label zurück, das in diesen *k* Datensätzen am häufigsten vorkommt.\n",
+    "1. finde die $k$ Datensätze, die dem ungelabelte Datensatz am ähnlichsten sind.\n",
+    "2. gib das Label zurück, das in diesen $k$ Datensätzen am häufigsten vorkommt.\n",
     "```\n"
    ]
   },
@@ -467,7 +467,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Die *k* nächsten Nachbarn bestimmen"
+    "### Die $k$ nächsten Nachbarn bestimmen"
    ]
   },
   {
