Korrekturen Links von Tooltips

--- a/book/features.ipynb
+++ b/book/features.ipynb
@@ -12,7 +12,7 @@
     "```{warning}\n",
     ":name: hinweis-tooltips\n",
     "1. Die Tooltips funktionieren manchmal beim Entwickeln mit `make develop` nicht für Links auf andere Seiten im Buch. Hier muss ein `make clean` erfolgen, damit die Links wieder funktionieren. Hat aber keine Auswirkung auf die Live-Version, da diese ja nur einmal gebaut wird und dann nicht mehr verändert wird.  \n",
-    "Alternativ für das Testen der Tooltip die Seite mit `make build` neu bauen und manuell öffnen ohne Live-Server.  \n",
+    "Daher besser für das Testen der Tooltips die Seite mit `make build` neu bauen und manuell öffnen ohne Live-Server.  \n",
     "2. Die Referenzen der Tooltips können unterschiedlich angebeben werden. Es ist jedoch ratsam, immer den gewünschten Text und den Namen der Referenz anzugeben. Also statt ``{term}`Aktivierungsfunktion` `` lieber ``{term}`Aktivierungsfunktion <Aktivierungsfunktion>` ``. So ist man auf der sicheren Seite, wenn sie der Name eines Dokuments oder einer Referenz ändern sollte.\n",
     "\n",
     "```\n",
@@ -37,7 +37,7 @@
     "- Link zu Admonition: {ref}`hinweis-tooltips` (schneit nicht zu funktionieren)\n",
     "- Link zu Admonition mit eigenem Text: {ref}`Hinweis zu Tooltips <hinweis-tooltips>`\n",
     "- Link zu Beispiel-Abschnitt mit ``{ref}``: {ref}`Beispiel-Abschnitt <beispiel-abschnitt>`\n",
-    "- Link zu Beispiel-Abschnitt mit ``[]()``: [Beispiel-Abschnitt](#beispiel-abschnitt)\n",
+    "- Link zu Beispiel-Abschnitt mit ``[]()`` (ohne #): [Beispiel-Abschnitt](beispiel-abschnitt)\n",
     "- Link zu englischen Wikipedia: [Tooltip](https://en.wikipedia.org/wiki/Tooltip) \\[deutsches Wiki leider nicht unterstützt\\]\n",
     "\n",
     "## Block attributes\n",
@@ -81,16 +81,12 @@
     "## Beispiel-Abschnitt zum verlinken\n",
     "Diesen Abschnitt kann man auch verlinken, indem mal einen Verweisschlüssel vorher\n",
     "setzt mit ``(...)=``.\n",
-    "Achtung: damit die Verlinkung als Link mit 🔗 erscheint, muss der Link mit \n",
-    "als Rolle mit ``{ref}... <...>`` statt als Cross Referenz mit ``[...](...)`` gesetzt werden.\n",
-    "\n",
-    " "
+    "Achtung: damit die Verlinkung als Link mit 🔗 erscheint, muss der Link  \n",
+    "als Rolle mit ``{ref}... <...>`` oder als Cross Referenz mit ``[...](...)`` aber ohne # gesetzt werden.\n",
+    "Z.B:\n",
+    "- ``{ref}`Beispiel-Abschnitt <beispiel-abschnitt>` `` \n",
+    "- ``[Beispiel-Abschnitt](beispiel-abschnitt)``"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
   }
  ],
  "metadata": {
