--- a/book/ki/kmeansclustering.ipynb
+++ b/book/ki/kmeansclustering.ipynb
@@ -12,7 +12,7 @@
     "````\n",
     "\n",
     "# k-Means-Clustering\n",
-    "Du kennst bereits den {doc}`k-Nächste-Nachbarn-Algorithmus <knearestneighbor>`, ein Verfahren, das mit {term}`Trainingsdaten <Trainingsdaten>` neue Daten klassifiziert. Nun betrachten wir [k-Means-Clustering](https://de.wikipedia.org/wiki/k-Means-Algorithmus), einen Algorithmus, um {term}`Datenpunkte <Datenpunkt>` in sogenannte Cluster zu gruppieren.\n",
+    "Du kennst bereits den [k-Nächste-Nachbarn-Algorithmus](knearestneighbor), ein Verfahren, das mit {term}`Trainingsdaten <Trainingsdaten>` neue Daten klassifiziert. Nun betrachten wir [k-Means-Clustering](https://de.wikipedia.org/wiki/k-Means-Algorithmus), einen Algorithmus, um {term}`Datenpunkte <Datenpunkt>` in sogenannte Cluster zu gruppieren.\n",
     "\n",
     "Im Bereich der KI wird oft mit großen Datenmengen gearbeitet, die auf Muster untersucht und in Gruppen eingeteilt werden. Algorithmen dieser Art sind Verfahren der [Clusteranalyse](https://de.wikipedia.org/wiki/Clusteranalyse). k-Means ist so ein Algorithmus, der Datenpunkte ohne vorherige Kenntnis der Gruppenzugehörigkeit in $k$ Cluster einteilt. Das macht k-Means zu einem {term}`unüberwachten Lernalgorithmus <Unüberwachtes Lernen>`. Seine Stärke liegt in der effizienten Strukturierung großer Datensätze und dem Entdecken versteckter Muster.\n",
     "\n",
@@ -30,7 +30,7 @@
    "source": [
     "## Überwachtes vs. unüberwachtes Lernen\n",
     "\n",
-    "Beide Algorithmen stammen aus dem Bereich **Maschinelles Lernen**, welches grob in **überwachtes Lernen** und **unüberwachtes Lernen** unterteilt wird. Beim [überwachten Lernen](https://de.wikipedia.org/wiki/Überwachtes_Lernen) wird ein Datensatz verwendet, der Trainingsdaten mit den zugehörigen **{term}`Labels <Label>`** enthält. Das Modell lernt aus Beispielen, bei denen die richtigen Antworten bereits bekannt sind. Diese Methode eignet sich gut für Aufgaben wie Klassifikationen (z.B. Spam-Erkennung). Der {doc}`k-Nächste-Nachbarn-Algorithmus <knearestneighbor>` ist ein solches Verfahren.\n",
+    "Beide Algorithmen stammen aus dem Bereich **Maschinelles Lernen**, welches grob in **überwachtes Lernen** und **unüberwachtes Lernen** unterteilt wird. Beim [überwachten Lernen](https://de.wikipedia.org/wiki/Überwachtes_Lernen) wird ein Datensatz verwendet, der Trainingsdaten mit den zugehörigen **{term}`Labels <Label>`** enthält. Das Modell lernt aus Beispielen, bei denen die richtigen Antworten bereits bekannt sind. Diese Methode eignet sich gut für Aufgaben wie Klassifikationen (z.B. Spam-Erkennung). Der [k-Nächste-Nachbarn-Algorithmus](knearestneighbor) ist ein solches Verfahren.\n",
     "\n",
     "Beim [unüberwachten Lernen](https://de.wikipedia.org/wiki/Unüberwachtes_Lernen) sind die Trainingsdaten nicht gelabelt. Stattdessen versuchen unüberwachte Algorithmen, eigenständig Muster in den Daten zu erkennen. Clustering, wie k-Means, ist ein typisches Beispiel dafür. Der Algorithmus ermittelt Gruppen (Cluster) von ähnlichen Datenpunkten und hilft, ungeordnete Daten zu strukturieren."
    ]
@@ -107,13 +107,13 @@
     "````{margin}\n",
     "```{admonition} Try it!\n",
     ":class: seealso\n",
-    "Auf [dieser toll programmierten Seite](https://www.naftaliharris.com/blog/visualizing-k-means-clustering/) kann man den Algorithmus mit verschiedenen Datensammlugen graphisch nachspielen!\n",
+    "Auf [dieser toll programmierten Seite](https://www.naftaliharris.com/blog/visualizing-k-means-clustering) kann man den Algorithmus mit verschiedenen Datensammlugen graphisch nachspielen!\n",
     "```\n",
     "````\n",
     "\n",
     "Der Ablauf des k-means-Clustering Algorithmus wird in folgende Schritte aufgeteilt:\n",
     "```{important}\n",
-    ":name: admonition-k-means-algorithmus\n",
+    ":name: ablauf-k-means-algorithmus\n",
     "**Auswahl der Anzahl der Cluster ($k$)**  \n",
     "Bevor der Algorithmus gestartet werden, muss die **Anzahl der Cluster** $k$ festgelegt werden. Diese Zahl bestimmt, in wie viele Gruppen die Datenpunkte aufgeteilt werden sollen.\n",
     "\n",
@@ -121,7 +121,7 @@
     "Als nächstes werden $k$ Datenpunkte aus den Daten oder $k$ zufällige Punkte ausgewählt, um die anfänglichen **Zentroiden** (Cluster-Zentren) zu bestimmen.\n",
     "\n",
     "**2. Zuweisung der Datenpunkte und Bildung der Cluster**  \n",
-    "Jeder Datenpunkt wird dem nächstgelegenen Zentroiden zugewiesen. Dies wird durch die {term}`Distanzmaße <Distanzmaße>` zu allen Zentroiden bestimmt (z.B. mittels Euklidischer Distanz oder {term}`Manhattan Distanz <Manhattan-Distanz>`).\n",
+    "Jeder Datenpunkt wird dem nächstgelegenen Zentroiden zugewiesen. Dies wird durch die {term}`Distanzmaße <Distanzmaße>` zu allen Zentroiden bestimmt (z.B. mittels {term}`Euklidischer Distanz <Euklidische Distanz>` oder {term}`Manhattan-Distanz <Manhattan-Distanz>`).\n",
     "\n",
     "**3. Aktualisierung der Zentroiden**  \n",
     "Die Zentroiden werden neu berechnet, indem der Durchschnitt (**Mean**) aller Punkte innerhalb eines Clusters berechnet wird.\n",
@@ -158,9 +158,9 @@
     "```\n",
     "\n",
     "**Hilfreiche Quellen fürs weitere Verständnis**\n",
-    "- [Ki Buch: Wetterdaten-Beispiel](https://www.maschinennah.de/ki-buch/)\n",
-    "- [Visualizing k-Means Clustering](https://www.naftaliharris.com/blog/visualizing-k-means-clustering/)\n",
-    "- [k-means clustering visualisiert mit Distanzenberechnug](https://shabal.in/visuals/kmeans/6.html)"
+    "- [KI Buch: Wetterdaten-Beispiel](https://www.maschinennah.de/ki-buch/)\n",
+    "- [k-Means Clustering visualisiert ](https://www.naftaliharris.com/blog/visualizing-k-means-clustering/)\n",
+    "- [k-Means Clustering visualisiert mit Distanzenberechnug](https://shabal.in/visuals/kmeans/6.html)"
    ]
   },
   {
@@ -271,7 +271,7 @@
     "\n",
     "```{admonition} Tipp\n",
     ":class: tip, dropdown\n",
-    "Was könnte der [Algorithmus](#k-means-clustering-algorithmus) zu Beginn anders gemacht haben, damit unterschiedlich Ergebnisse zustande kommen?\n",
+    "Was könnte der [Algorithmus](ablauf-k-means-algorithmus) zu Beginn anders gemacht haben, damit unterschiedliche Ergebnisse zustande kommen?\n",
     "```{admonition} Tipp, wenn du noch keine Idee hast\n",
     ":class: tip, dropdown\n",
     "Wie werden die Zentroiden initialisiert und wie kann dieses Verfahrensweise zu unterschiedliche Ergebnissen führen?\n",
@@ -292,7 +292,7 @@
    "source": [
     "### Initialisierung der Clusterzentren mit k&#8209;means++\n",
     "\n",
-    "**k-means++** ist eine verbesserte Methode zur Initialisierung der Clusterzentren beim k-means-Clustering. Es verbessert die Qualität und Effizienz des Algorithmus durch folgende Schritte:\n",
+    "**[k-means++(https://de.wikipedia.org/wiki/K-Means-Algorithmus)]** ist eine verbesserte Methode zur Initialisierung der Clusterzentren beim k-means-Clustering. Es verbessert die Qualität und Effizienz des Algorithmus durch folgende Schritte:\n",
     "\n",
     "1. **Erster Startpunkt**:\n",
     "   - Ein Punkt wird zufällig aus den Daten gewählt.\n",
@@ -362,7 +362,7 @@
     "\n",
     "```{admonition} Warum funktioniert die Elbow-Methode?\n",
     ":class: note\n",
-    "Die Methode basiert auf der Idee, dass eine kleine Anzahl von Clustern zu einer schlechten Gruppierung führt, während eine zu große Anzahl von Clustern unnötig ist und zu [Overfitting](#overfitting) führen kann. Der Knick bei Anzahl der Cluster $= 2$ zeigt den Punkt, an dem sich der Aufwand für mehr Cluster nicht mehr lohnt.\n",
+    "Die Methode basiert auf der Idee, dass eine kleine Anzahl von Clustern zu einer schlechten Gruppierung führt, während eine zu große Anzahl von Clustern unnötig ist und zu [Overfitting](overfitting) führen kann. Der Knick bei Anzahl der Cluster $= 2$ zeigt den Punkt, an dem sich der Aufwand für mehr Cluster nicht mehr lohnt.\n",
     "```\n",
     "\n",
     "Mit der Elbow-Methode können wir also datengetrieben und anschaulich entscheiden, wie viele Cluster sinnvoll sind, anstatt dies nur durch Intuition oder Versuch und Irrtum zu bestimmen.\n"
